[metadata]
name = pressiodemoapps
version = 0.14.0
author = F.Rizzi, E.Parish, P.Blonigan, J.Tencer, M.Wróbel
author_email = fnrizzi@sandia.gov
description = pressio-demoapps: Python bindings: collection of physics problems of varying complexity
long_description = file: DESCRIPTION.rst
long_description_content_type = text/x-rst
url = https://github.com/Pressio/pressio-demoapps
project_urls =
    Bug Tracker = https://github.com/Pressio/pressio-demoapps/issues
keywords=model reduction, sample mesh, scientific computing, linear algebra, pressio, HPC
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: C++
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries
    Development Status :: 5 - Stable

[options]
zip_safe = False
package_dir =
    = build
packages = find:
python_requires = >=3.6

[options.package_data]
* = *.so

[options.packages.find]
where = build
